Fixed extra padding on translate login page

--- a/root/static/css/content.css
+++ b/root/static/css/content.css
@@ -5118,7 +5118,6 @@ a.fill {
   float: right; }
 
 .account-actions {
-  padding-top: 22px;
   display: inline-block;
   white-space: nowrap;
   word-wrap: break-word; }
